--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -1,19 +1,43 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/Widget.AppWidgetResize.AppWidget.Container"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:theme="@style/Theme.AppWidgetResize.AppWidgetContainer">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:theme="@style/Theme.AppWidgetResize.AppWidgetContainer"
+    android:background="@color/black">
 
     <TextView
-        android:id="@+id/appwidget_text"
-        style="@style/Widget.AppWidgetResize.AppWidget.InnerView"
+        android:id="@+id/appwidget_text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_margin="8dp"
-        android:contentDescription="@string/appwidget_text"
-        android:text="@string/appwidget_text"
-        android:textSize="24sp"
-        android:textStyle="bold|italic" />
-</RelativeLayout>
+        android:layout_gravity="top|end"
+        android:layout_weight="0"
+        android:layout_margin="6dp"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
+        android:text="@string/time1"
+        android:ellipsize="none"
+        android:singleLine="true"
+        android:textSize="32dp"
+        android:textColor="@color/white"
+        tools:ignore="SpUsage" />
+
+    <TextView
+        android:id="@+id/appwidget_text2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|end"
+        android:layout_weight="1"
+        android:layout_margin="6dp"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
+        android:gravity="end"
+        android:text="@string/time2"
+        android:ellipsize="none"
+        android:singleLine="true"
+        android:textSize="48dp"
+        android:textColor="@color/white"
+        android:background="@color/light_blue_900"
+        tools:ignore="SpUsage" />
+
+</LinearLayout>
