--- a/app/src/main/res/xml/widget_info.xml
+++ b/app/src/main/res/xml/widget_info.xml
@@ -2,7 +2,6 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:description="@string/app_widget_description"
-    android:initialKeyguardLayout="@layout/widget"
     android:initialLayout="@layout/widget"
     android:minWidth="180dp"
     android:minHeight="40dp"
@@ -11,6 +10,6 @@
     android:resizeMode="horizontal"
     android:targetCellWidth="3"
     android:targetCellHeight="1"
-    android:updatePeriodMillis="86400000"
+    android:updatePeriodMillis="0"
     android:widgetCategory="home_screen"
-    tools:targetApi="s" />
+    tools:targetApi="31" />
