--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -10,7 +10,7 @@
         android:id="@+id/appwidget_text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="top|end"
+        android:layout_gravity="center_vertical|end"
         android:layout_weight="0"
         android:layout_margin="6dp"
         android:paddingStart="8dp"
@@ -26,7 +26,7 @@
         android:id="@+id/appwidget_text2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="top|end"
+        android:layout_gravity="center_vertical|end"
         android:layout_weight="1"
         android:layout_margin="6dp"
         android:paddingStart="8dp"
