--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -17,7 +17,7 @@
         android:paddingEnd="8dp"
         android:text="@string/time1"
         android:ellipsize="none"
-        android:singleLine="true"
+        android:maxLines="2"
         android:textSize="32dp"
         android:textColor="@color/white"
         tools:ignore="SpUsage" />
@@ -34,7 +34,7 @@
         android:gravity="end"
         android:text="@string/time2"
         android:ellipsize="none"
-        android:singleLine="true"
+        android:maxLines="2"
         android:textSize="48dp"
         android:textColor="@color/white"
         android:background="@color/light_blue_900"
