--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -11,14 +11,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|end"
-        android:layout_weight="0"
+        android:layout_weight="1"
         android:layout_margin="6dp"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
+        android:gravity="end"
         android:text="@string/time1"
         android:ellipsize="none"
         android:maxLines="2"
-        android:textSize="32dp"
+        android:textSize="30dp"
         android:textColor="@color/white"
         tools:ignore="SpUsage" />
 
